# MazeLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
.github/workflows/: cmake.yml
pybind/: setup.py
src/: example.cpp  main.cpp  test.cpp
src/algorithms/: Algorithm.cpp  Algorithm.h
src/algorithms/type/: BreadthFirstSearch.cpp  BreadthFirstSearchAlgorithm.cpp  DepthFirstSearchAlgorithm.cpp  DijkstraAlgorithm.cpp  KruskalAlgorithm.cpp  LeeAlgorithm.cpp  RecursiveBacktracker.cpp  TremauxsAlgorithm.cpp  WallFollower.cpp  WallFollowingAlgorithm.cpp
src/graph/: Graph.cpp  Graph.h
src/headers/: Expected.h  Head.h
src/headers/libs/: json.hpp
src/image/: Image.cpp  Image.h
src/interface/: Interface.cpp  Interface.h
src/maze/: Maze.cpp  Maze.h
src/method/: Method.cpp  Method.h
src/method/type/: ImageMemoryMethod.cpp  ImageSavingMethod.cpp  TextFileLoadingMethod.cpp  TextFileSavingMethod.cpp
src/pybind/: bind.cpp  install.cpp
